--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "target": "es6",
   "scripts": {
     "test": "test",
-    "start": "electron ."
+    "start": "electron .",
+    "buildcpp": "node-gyp rebuild --target=24.0.0 --dist-url=https://electronjs.org/headers",
+    "transpile": "babel ./build/Release --out-dir dist --copy-files"
   },
   "author": "",
   "license": "ISC",
@@ -16,8 +18,12 @@
     "electron": "^24.1.2"
   },
   "dependencies": {
+    "bindings": "~1.2.1",
+    "bootstrap": "^5.3.0",
+    "electron-remote": "^1.3.0",
     "git": "^0.1.5",
     "nan": "^2.17.0",
+    "node-addon-api": "*",
     "node-gyp": "^5.0.1"
   },
   "engines": {
