--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "scripts": {
     "test": "test",
     "start": "electron .",
-    "buildcpp": "node-gyp rebuild --target=24.0.0 --dist-url=https://electronjs.org/headers",
-    "transpile": "babel ./build/Release --out-dir dist --copy-files"
+    "buildcpp": "node-gyp rebuild --target=24.0.0 --dist-url=https://electronjs.org/headers"
   },
   "author": "",
   "license": "ISC",
@@ -18,13 +17,12 @@
     "electron": "^24.1.2"
   },
   "dependencies": {
-    "bindings": "~1.2.1",
-    "bootstrap": "^5.3.0",
     "electron-remote": "^1.3.0",
     "git": "^0.1.5",
     "nan": "^2.17.0",
     "node-addon-api": "*",
-    "node-gyp": "^5.0.1"
+    "node-gyp": "^5.0.1",
+    "v8-compile-cache": "^2.3.0"
   },
   "engines": {
     "node": "^18.2.0"
