--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "js-standalone-app",
-  "version": "1.0.0",
+  "name": "pvstvbot.exe",
+  "version": "1.0.1",
   "description": "The front end for clippi replacement",
   "main": "main.js",
   "type": "commonjs",
   "target": "es6",
   "scripts": {
     "test": "test",
-    "start": "electron .",
+    "start": "set NODE_ENV=development&& webpack && electron .",
+    "startProd": "set NODE_ENV=production&& webpack && electron .",
     "buildcpp": "node-gyp rebuild --target=24.0.0 --dist-url=https://electronjs.org/headers",
     "package": "electron-packager . --platform=win32 --arch=x64 PVSTVBOT --icon=img/noodles.ico"
   },
@@ -15,11 +16,12 @@
   "license": "ISC",
   "devDependencies": {
     "@electron-forge/cli": "^6.0.4",
-    "electron": "^24.1.2"
+    "electron": "^24.1.2",
+    "webpack-cli": "^5.1.4",
+    "electron-remote": "^1.3.0",
+    "git": "^0.1.5"
   },
   "dependencies": {
-    "electron-remote": "^1.3.0",
-    "git": "^0.1.5",
     "nan": "^2.17.0",
     "node-addon-api": "*",
     "node-gyp": "^5.0.1",
