--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,7 @@
             "windows": {
                 "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron.cmd"
             },
+            "env": {"NODE_ENV": "development"},
             "args": ["."],
             "outputCapture": "std"
         },
