--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   "devDependencies": {
     "@electron-forge/cli": "^6.0.4",
     "electron": "^24.1.2",
-    "webpack-cli": "^5.1.4",
     "electron-remote": "^1.3.0",
-    "git": "^0.1.5"
+    "git": "^0.1.5",
+    "jest": "^29.6.2",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "nan": "^2.17.0",
