attempting parity with 0.4.1, missing some CSS and need to test this

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,10 @@
 .cache/
 build/
-Bootstrap/
 dist/obj/
-jQuery/
-MDB/
 node_modules/
 logger.js
 test.js
 build/
-build/Release/v8engine.node
-build/binding.sln
-build/config.gypi
-temp.json
-release/bundle.js
-release/bundle.js.LICENSE.txt
-test/testFiles/giantComboTestData.json
+release/
 out/
-img/render.gif
-PVSTVBOT-win-x64/
-test/Engine.test.js
 CMakeFiles
