--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "startProd": "set NODE_ENV=production&& webpack && electron .",
     "pack": "webpack",
     "cleancpp": "node-gyp clean",
-    "buildcpp64": "node-gyp rebuild --verbose --dist-url=https://electronjs.org/headers --arch=x64",
+    "configurecpp": "node-gyp configure --openssl_fips=''",
+    "buildcpp64": "node-gyp rebuild --verbose --dist-url=https://electronjs.org/headers --arch=x64 --openssl_fips=''",
     "buildcpp32": "node-gyp rebuild --verbose --dist-url=https://electronjs.org/headers --arch=ia32",
     "package": "set NODE_ENV=production&& webpack && electron-packager . --platform=win32 --arch=x64 PVSTVBOT --icon=img/noodles.ico --ignore webpack.config.js --ignore .gitignore --ignore view --ignore controller --ignore jQuery --ignore MDB --ignore .vscode --ignore binding.gyp --ignore test.js --ignore src --ignore Utility.js --overwrite",
     "packageF": "electron-forge package",
@@ -25,6 +26,7 @@
     "@electron-forge/cli": "^6.3.0",
     "@electron-forge/maker-squirrel": "^6.3.0",
     "electron": "^24.1.2",
+    "electron-forge-maker-appimage": "trusktr/electron-forge-maker-appimage#patch-1",
     "electron-remote": "^1.3.0",
     "git": "^0.1.5",
     "jest": "^29.6.2",
@@ -66,6 +68,12 @@
           "config": {
             "setupIcon": "img/noodles.ico",
             "loadingGif": "img/render.gif",
+            "name": "pvstvbot"
+          }
+        },
+        {
+          "name": "electron-forge-maker-appimage",
+          "config": {
             "name": "pvstvbot"
           }
         }
